--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ numpy
 
 # This will cause pip to auto-upgrade and stop scaring people with warning messages
 pip
+torch>=2.1
+numpy>=1.24
+gymnasium>=0.29
