Resume training from Necto with hot reload and kickoff fixes

--- a/destroyer.cfg
+++ b/destroyer.cfg
@@ -1,5 +1,4 @@
 [Locations]
-# Paths are RELATIVE to this cfg file
 python_file = bot.py
 looks_config = appearance.cfg
 requirements_file = requirements.txt
@@ -9,7 +8,6 @@ supports_early_start = True
 
 [Details]
 developer = ZeroII99II
-description = Destroyer — SSL-focused bot with aerial curriculum, speed-flip kickoff, and hot-reload.
+description = Destroyer — resumes from Necto, hot-reload, speed-flip KO, SSL curriculum.
 language = Python
 tags = 1v1, training, ml
-
