--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-# Include everything the framework requires
-rlbot>=1.74.0
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch>=2.1
-rlgym-compat==1.0.2
-numpy>=1.24
+rlbot==1.68.0
+numpy>=1.24,<2.0
 gymnasium>=0.29
-
-# This will cause pip to auto-upgrade and stop scaring people with warning messages
-pip
+torch>=2.1
