Add autosave and enforce normal match speed

--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -10,7 +10,7 @@ enable_state_setting = True
 
 [Mutator Configuration]
 Game Speed = Default
-Match Length = 5 Minutes
+Match Length = Unlimited
 Boost Amount = Default
 
 [Participant Configuration]
