Add state setting probe

--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -7,10 +7,11 @@ game_mode = Soccar
 game_map = Mannfield
 skip_replays = True
 enable_state_setting = True
+# Let it run forever if desired
+Match Length = Unlimited
 
 [Mutator Configuration]
 Game Speed = Default
-Match Length = Unlimited
 Boost Amount = Default
 
 [Participant Configuration]
@@ -21,4 +22,3 @@ participant_type_0 = rlbot
 participant_config_1 = destroyer.cfg
 participant_team_1 = 1
 participant_type_1 = rlbot
-
