Refine simple policy

--- a/destroyer.cfg
+++ b/destroyer.cfg
@@ -1,13 +1,20 @@
-[Locations]
-python_file = bot.py
-looks_config = appearance.cfg
-requirements_file = requirements.txt
-name = Destroyer
-use_virtual_environment = False
-supports_early_start = True
+[Bot Loadout]
+team_color_id = 27
+custom_color_id = 0
+car_id = 23
 
-[Details]
-developer = ZeroII99II
-description = Destroyer — resumes from Necto, hot-reload, speed-flip KO, SSL curriculum.
-language = Python
-tags = 1v1, training, ml
+[Bot Loadout Orange]
+team_color_id = 27
+custom_color_id = 0
+car_id = 23
+
+[Bot Paint Blue]
+car_paint_id = 0
+
+[Bot Paint Orange]
+car_paint_id = 0
+
+[Bot Info]
+name = Destroyer
+python_file = bot.py
+maximum_tick_rate_preference = 120
