Convert repo to Bronze-only RLBot bot

--- a/destroyer.cfg
+++ b/destroyer.cfg
@@ -1,3 +1,8 @@
+[Bot Info]
+name = Destroyer (Bronze)
+python_file = bot.py
+maximum_tick_rate_preference = 120
+
 [Bot Loadout]
 team_color_id = 27
 custom_color_id = 0
@@ -13,8 +18,3 @@ car_paint_id = 0
 
 [Bot Paint Orange]
 car_paint_id = 0
-
-[Bot Info]
-name = Destroyer
-python_file = bot.py
-maximum_tick_rate_preference = 120
