--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 rlbot==1.*
-numpy>=1.23
-rlgym-compat>=1.1   # allow newer compat
+numpy==1.26.4
+rlgym-compat>=1.1    # allow newer compat
 
-# Optional: only needed if you want to run a TorchScript model at runtime.
+# Torch is optional; only needed if you want to load a model at runtime.
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.0.1+cpu
 
