--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -14,10 +14,10 @@ Game Speed = Default
 Boost Amount = Default
 
 [Participant Configuration]
-participant_config_0 = destroyer.cfg
+participant_config_0 = bot.cfg
 participant_team_0 = 0
 participant_type_0 = rlbot
 
-participant_config_1 = destroyer.cfg
+participant_config_1 = bot.cfg
 participant_team_1 = 1
 participant_type_1 = rlbot
